# nfse-extractor

./: .dockerignore  .gitignore  Dockerfile  README.md  build_files.sh  docker-compose.yml  extract_cli.py  manage.py  pyproject.toml  requirements.txt  tutorial_cli.md  vercel.json
docs/: backlog.md
docs/arquivos/: nfse.txt
extractor/: data_extractor.py  urls.py  views.py
extractor/static/extractor/css/: style.css
extractor/static/extractor/js/: main.js
extractor/templates/extractor/: index.html
nfse_project/: asgi.py  settings.py  urls.py  wsgi.py
test_files/: cnpj prestador 77 444.txt
tests/: conftest.py
tests/integration/: test_view.py
tests/unit/: test_data_extractor.py
